base/01-resources/006-grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deploy
  namespace: grafana
  labels:
    environment: extern
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      volumes:
        - name: grafana-ini
          configMap:
            name: grafana-ini
        - name: novatec-service-dependency-graph-panel
          emptyDir: {}
      containers:
        - name: grafana
          image: grafana/grafana
          volumeMounts:
            - mountPath: /etc/grafana/
              name: grafana-ini
            - mountPath: /var/lib/grafana/plugins/novatec-sdg-panel
              name: novatec-service-dependency-graph-panel
          ports:
            - containerPort: 3000
              name: web
