base/01-resources/006-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  labels:
    environment: extern
    app: grafana
spec:
  tls:
    - hosts:
        - grafana.example.tld
  rules:
    - host: grafana.example.tld
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana-service
                port:
                  number: 8111
